--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,1 +1,5 @@
 booking.properties = product profile dev
+spring.datasource.url=jdbc:mysql://mysql5044.site4now.net:3306/db_a67440_dbreast
+spring.datasource.username=a67440_dbreast
+spring.datasource.password=ABMcobol729
+
