--- a/booking-microservice-prod.properties
+++ b/booking-microservice-prod.properties
@@ -1,1 +1,4 @@
 booking.properties = booking profile prod
+spring.datasource.url=jdbc:mysql://mysql5044.site4now.net:3306/db_a67440_dbreast
+spring.datasource.username=a67440_dbreast
+spring.datasource.password=ABMcobol729
