--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,1 +1,6 @@
 product.properties = booking profile dev
+spring.application.name=product-microservice
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products-db
+spring.data.mongodb.database=products-db
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
