--- a/product-microservice-prod.properties
+++ b/product-microservice-prod.properties
@@ -1,1 +1,7 @@
 product.properties = product profile prod
+
+spring.application.name=product-microservice
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products-db
+spring.data.mongodb.database=products-db
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
