--- a/product-microservice-prod.properties
+++ b/product-microservice-prod.properties
@@ -1,5 +1,6 @@
 product.properties = product profile prod
 
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 spring.application.name=product-microservice
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products-db
 spring.data.mongodb.database=products-db
