--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,4 +1,5 @@
 product.properties = booking profile dev
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 spring.application.name=product-microservice
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products-db
 spring.data.mongodb.database=products-db
