--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products-db
 spring.data.mongodb.database=products-db
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
+
+app.testProp = hello test product
